<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/buttonHomeEmp"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/fa_home"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonTaskEmp"
        app:layout_constraintEnd_toStartOf="@+id/buttonTaskEmp"
        android:layout_marginRight="32dp" />

    <Button
        android:id="@+id/buttonProfileEmp"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/fa_user"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonStorageEmp"
        app:layout_constraintStart_toEndOf="@+id/buttonStorageEmp"
        android:layout_marginLeft="32dp" />

    <Button
        android:id="@+id/buttonStorageEmp"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/fa_archive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/buttonTaskEmp"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/fa_check_square_o"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonStorageEmp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        android:layout_marginRight="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>